complete system restructuring with validations, permissions, and water module overhaul
Implemented a full system restructuring with a strong focus on clean architecture, improved usability, and proper separation of concerns between modules. All error messages were corrected and standardized across the application, including password confirmation, required fields, character limits, invalid email, invalid phone number, weak password, invalid login, and other validation rules. Messages are now displayed clearly, in the correct location, and with better visual presentation.

The water module was fully reorganized to remove mixed functionality and confusing navigation. Each function now has its own route, page, or section, making the module more intuitive and easier to use. Clients can request the service and track the status of their requests clearly, while staff manage water-related operations and administrators retain full control of the module.

A robust permissions system was also implemented, allowing administrators to assign permissions to individual staff members and manage all available permissions in a dedicated area. The sidebar now displays only the links allowed for each user based on their assigned permissions.

Authentication was improved to support login with either email or phone number. Phone-based registration is fully supported, which matches the local context in Mozambique, and email is now optional for users who do not have one. Client accounts created by staff use the default password ****.

The system now supports linking clients to water plans. Once a client is associated with a water service, the client dashboard automatically reflects access to the water functionality. It is also possible to register individuals before they have an account, and later sync and activate their water data when they create one. When staff mark a person as eligible for an account, the water data can be synchronized and activated correctly.

Water meter reading manage